--- a/stylesheets/style1.css
+++ b/stylesheets/style1.css
@@ -1,6 +1,7 @@
+
+
 body{
     background-image: url(https://i.pinimg.com/originals/8e/46/15/8e46150f790fbefe438d9c2767c32ad1.gif);
-
 }
 h1{
     color: white;
@@ -16,12 +17,14 @@ h1{
     width: 300px;
     height: 50px;
     font-size: 20px;
-    background-color: black
+    background-color: black;
+    -webkit-user-select: none;
+    user-select: none;
 }
 #welcome1:hover{
     color: gold;
 }
-#welcome2{
+#pot_roast{
     color: black;
     margin-top: 1%;
     margin-right: auto;
@@ -31,17 +34,14 @@ h1{
     width: 500px;
     border: 20px ridge;
     font-size: 18px;
+    height: 360px;
 }
 
-#imagetest{
-
-    object-fit: contain;
-
-    position: absolute;
-    right: 300px;
-    bottom: 500px;
-}
-
-img{
-    display: block;
+#que{
+    display: inline;
+    position: relative;
+    width: fit-content;
+    bottom: 300px;
+    left: 600px;
+    
 }
