--- a/stylesheets/style1.css
+++ b/stylesheets/style1.css
@@ -25,16 +25,11 @@ h1{
     color: gold;
 }
 #pot_roast{
-    color: black;
-    margin-top: 1%;
-    margin-right: auto;
-    margin-left: auto;
-    padding: 1%;
-    background-color: white;
-    width: 500px;
-    border: 20px ridge;
-    font-size: 18px;
-    height: 360px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
 }
 
 #que{
