--- a/stylesheets/style1.css
+++ b/stylesheets/style1.css
@@ -8,6 +8,7 @@ h1{
 }
 #welcome1{
     color: wheat;
+    border-color: wheat;
     margin-top: 5%;
     margin-right: auto;
     margin-left: auto;
@@ -25,6 +26,7 @@ h1{
 }
 #welcome1:hover{
     color: gold;
+    border-color: gold;
 }
 
 #earth{
@@ -42,56 +44,99 @@ h1{
 #wrap{
     float:left;
     position:fixed;
-    min-width:800x;
+    min-width:2000px;
     top: 10%;
     z-index: -1;
     -webkit-user-select: none;
     user-select: none;
 
-#boxes{
-    position: fixed;
-    transform: translate(90%, -225%);
-    display: grid;
-    grid-template-areas: 
-        "box1" "box2" "box3"
-        "box4" "box5" "box6"
-        "box7" "box8" "box9";
-    grid-template-columns: 1fr 1fr 1fr;
-    z-index: -1;
-    
-}
-.box{
-    pointer-events: auto;
-    /*background-color: white;*/
-    width: 80px;
-    height: 80px;
-    
-   
+
+#backing{
+    width: 300px;
+    height: 300px;
+    background-color: black;
+    position: absolute;
+    transform: translate(755px, -970px);
+    z-index: -2;
 }
 
-#click_me{
+#click_me {
     position: fixed;
-    transform: translate(465px, -488px);
+    transform: translate(1080px, -910px);
     width: 90px;
-    height: 110px;
-    background: transparent;
-    border: none !important;
-    font-size:0;
+    height: 150px;
+   /* background: transparent;
+    border: none !important;*/
     pointer-events: auto;
-    cursor:pointer;
-}
+    cursor: pointer;
+  }
 
 }
 #satellite{
     
     position: absolute;
-    width: 800px;
-    height: 800px;
+    width: 2000px;
+    height: 2000px;
     
-    transform: translate(-60%, 0);
+    transform: translate(-55%, -40%);
     pointer-events: none;
-    /*left: -100px;*/
-    /*-15% for open, -60% for close*/
-    /*animation-fill-mode: forwards;*/
+    /*open = -30%, close =  -55*/
+    z-index: 1;
     transition: all 1s;
+}
+
+#tvs{
+    position: fixed;
+    transform: translate(800px, -950px);
+    z-index: -1;
+}
+
+.tv{
+    /*background-color: white;*/
+    object-fit:fill;
+    width: 80px;
+    height: 80px;
+    justify-content: center;
+    pointer-events: auto;
+    
+}
+
+#tv1{
+    position: absolute;
+    transform: translate(-2px, -10px);
+}
+
+#tv2{
+    position: absolute;
+    transform: translate(103px, -8px);
+}
+
+#tv3{
+    position: absolute;
+    transform: translate(202px, -4px);
+}
+
+#tv4{
+    position: absolute;
+    transform: translate(4px, 101px);
+}
+
+#tv5{
+    position: absolute;
+    transform: translate(105px, 96px);
+}
+
+#tv6{
+    position: absolute;
+    transform: translate(202px, 98px);
+}
+
+#tv7{
+    position: absolute;
+    transform: translate(11px, 204px);
+}
+
+#tv8{
+    position: absolute;
+    transform: translate(111px, 190px);
 }
