--- a/stylesheets/style1.css
+++ b/stylesheets/style1.css
@@ -35,6 +35,7 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 300px;
+    pointer-events: none;
     -webkit-user-select: none;
     user-select: none;
     z-index: -2;
