--- a/stylesheets/style1.css
+++ b/stylesheets/style1.css
@@ -43,52 +43,49 @@ h1{
 }
 
 #wrap{
-    float:left;
-    position:fixed;
-    min-width:2000px;
-    top: 10%;
+
+    transform: translate(-50%, -50%);
     z-index: -1;
     -webkit-user-select: none;
     user-select: none;
 
 
-#backing{
-    width: 300px;
-    height: 300px;
-    background-color: black;
-    position: absolute;
-    transform: translate(755px, -970px);
-    z-index: -2;
 }
-
-#click_me {
-    position: fixed;
-    transform: translate(1080px, -910px);
-    width: 90px;
-    height: 150px;
-   /* background: transparent;
-    border: none !important;*/
-    pointer-events: auto;
-    cursor: pointer;
-  }
-
-}
-#satellite{
+#satellites{
+    
+    
     
     position: absolute;
-    width: 2000px;
-    height: 2000px;
     
-    transform: translate(-55%, -40%);
+    
+    width: 1600px;
+    height: 900px;
+    transform: translate(10.5%, -18%);
+
+
     pointer-events: none;
     /*open = -30%, close =  -55*/
     z-index: 1;
     transition: all 1s;
 }
 
+
+
+.backing{
+    position: absolute;
+    height: 62px;
+    width: 62px;
+    margin-bottom: 15px;
+    background-color: black;
+    transform: translate(2px, -64px);
+
+    z-index: -50;
+}
+
+
 #tvs{
     position: fixed;
-    transform: translate(800px, -950px);
+    
     z-index: -1;
 }
 
@@ -104,40 +101,41 @@ h1{
 
 #tv1{
     position: absolute;
-    transform: translate(-2px, -10px);
+    transform: translate(454px, -737px) rotate(25deg);
+    
 }
+
 
 #tv2{
     position: absolute;
-    transform: translate(103px, -8px);
+    transform: translate(385px, -497px) rotate(0deg);
 }
 
 #tv3{
     position: absolute;
-    transform: translate(202px, -4px);
+    transform: translate(455px, -258px) rotate(-25deg);
 }
 
 #tv4{
     position: absolute;
-    transform: translate(4px, 101px);
+    transform: translate(1072px, -738px) rotate(-25deg);
 }
-
 #tv5{
     position: absolute;
-    transform: translate(105px, 96px);
+    transform: translate(1119px, -499px) rotate(0deg);
 }
 
 #tv6{
     position: absolute;
-    transform: translate(202px, 98px);
+    transform: translate(179px, -279px) rotate(-25deg);
 }
 
 #tv7{
     position: absolute;
-    transform: translate(11px, 204px);
+    transform: translate(1348px, -652px) rotate(-25deg);
 }
 
 #tv8{
     position: absolute;
-    transform: translate(111px, 190px);
+    transform: translate(1080px, -255px) rotate(25deg);
 }
