--- a/stylesheets/pages.css
+++ b/stylesheets/pages.css
@@ -110,3 +110,20 @@ a:hover {
 a:active {
   color: hotpink;
 } 
+
+
+
+
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
